--- a/PTTKHT_BackEnd/src/main/resources/application.properties
+++ b/PTTKHT_BackEnd/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # -----------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/pttkht_database
 spring.datasource.username=root
-spring.datasource.password=01629088065hh
+spring.datasource.password=thanhdien2107
 
 # -----------------------
 # Naming entity mapping table in SQL
@@ -29,7 +29,7 @@ spring.mvc.static-path-pattern=/swagger*
 # Pagable
 # -----------------------
 # Default page size
-spring.data.web.pageable.default-page-size=40
+spring.data.web.pageable.default-page-size=30
 
 # start page from 1 (instead of 0)
 spring.data.web.pageable.one-indexed-parameters=true
