--- a/PTTKHT_BackEnd/src/main/resources/application.properties
+++ b/PTTKHT_BackEnd/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # -----------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/pttkht_database
 spring.datasource.username=root
-spring.datasource.password=01629088065hh
+spring.datasource.password=1234
 
 # -----------------------
 # Naming entity mapping table in SQL
