fix sửa tài khoản

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "java.project.sourcePaths": ["Frontend/pttk_fe"]
+  "java.project.sourcePaths": ["Frontend/pttk_fe"],
+  "java.compile.nullAnalysis.mode": "disabled"
 }
